--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!--Button tag needs JS to open. This code creates a hpyerlink linking to the URL and with CSS I style so it looks like a button.-->
         <moreinfo class="moreinfo">
-            <a href="https://www.dc.com/characters/superman"> More about Superman</a>
+            <a href="https://www.dc.com/characters/superman" target="_blank"> More about Superman</a>
         </moreinfo>
     </div> 
 
@@ -74,12 +74,12 @@
         </p>
 
         <moreinfo class="moreinfo">
-            <a href="https://www.dc.com/characters/batman"> More about Batman</a>
+            <a href="https://www.dc.com/characters/batman" target="_blank"> More about Batman</a>
         </moreinfo>
 
     </div>
 
-    <!--THis section is about The Flash-->
+    <!--This section is about The Flash-->
     <div class="Flash" id="Flash">
         <h2> The Flash </h2>
 
@@ -103,7 +103,7 @@
         </p>
 
         <moreinfo class="moreinfo">
-            <a href="https://www.dc.com/characters/the-flash"> More about The Flash </a>
+            <a href="https://www.dc.com/characters/the-flash" target="_blank"> More about The Flash </a>
         </moreinfo>
     </div>
 
@@ -131,7 +131,7 @@
         </p>
         
         <moreinfo class="moreinfo">
-            <a href="https://www.dc.com/characters/wonder-woman"> More about Wonder Woman</a>
+            <a href="https://www.dc.com/characters/wonder-woman" target="_blank"> More about Wonder Woman</a>
         </moreinfo>
             
     </div>
@@ -161,7 +161,7 @@
         </p>
 
         <moreinfo class="moreinfo">
-            <a href="https://www.dc.com/characters/cyborg"> More about Cyborg </a>
+            <a href="https://www.dc.com/characters/cyborg" target="_blank"> More about Cyborg </a>
         </moreinfo>
 
     </div>
